# Scar

./: HDF5Read.py  POD.py  TecplotReader.py  animate.py  dmd.py  main.py  pltReader.py  reader.py
ReadTecplot/: CMakeLists.txt  main.cpp
